<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textSize="40sp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <EditText
            android:id="@+id/numberField"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints=""
            android:inputType="phone"
            android:textSize="40sp"
            tools:ignore="LabelFor,NestedWeights" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_7"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_8"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_9"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_4"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_5"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_6"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_1"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_2"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_3"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onNumberClick"
                    android:text="@string/_0"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onDotClick"
                    android:text="@string/dot"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />


                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="onEqualClick"
                    android:text="@string/equal"
                    android:textSize="40sp"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="@string/_3"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onDelClick"
                android:text="@string/delete"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onOperationClick"
                android:text="@string/divide"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onOperationClick"
                android:text="@string/multiply"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onOperationClick"
                android:text="@string/minus"
                android:textSize="40sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onOperationClick"
                android:text="@string/plus"
                android:textSize="40sp" />


        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0sp"
        android:layout_height="0sp"
        >


    <Button
        android:id="@+id/btnSin"
        android:layout_width="0sp"
        android:layout_height="0sp"

        android:onClick="onOperationClick"
        android:text="@string/sin"
        />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="0sp"
        android:layout_height="0sp"

        android:onClick="onOperationClick"
        android:text="@string/tan"
        />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="0sp"
        android:layout_height="0sp"

        android:onClick="onOperationClick"
        android:text="@string/log"
        />

    <Button
        android:id="@+id/btnPercent"
        android:layout_width="0sp"
        android:layout_height="0sp"

        android:onClick="onOperationClick"
        android:text="@string/percent"
        />

    <Button
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:onClick="onBracketClick"
        android:text="@string/leftBracket"
        />
        <Button
            android:id="@+id/btnCos"
            android:layout_width="0sp"
            android:layout_height="0sp"

            android:onClick="onOperationClick"
            android:text="@string/cos"
            />

        <Button
            android:id="@+id/btnCtg"
            android:layout_width="0sp"
            android:layout_height="0sp"

            android:onClick="onOperationClick"
            android:text="@string/ctg"
            />

        <Button
            android:id="@+id/btnPower"
            android:layout_width="0sp"
            android:layout_height="0sp"

            android:onClick="onOperationClick"
            android:text="@string/degree"
            />

        <Button
            android:id="@+id/btnFact"
            android:layout_width="0sp"
            android:layout_height="0sp"

            android:onClick="onOperationClick"
            android:text="@string/fact"
            />

        <Button
            android:layout_width="0sp"
            android:layout_height="0sp"

            android:onClick="onBracketClick"
            android:text="@string/rightBracket"
             />
</LinearLayout>
</LinearLayout>
